# kicad-footprints

./: .gitattributes  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DCC6C-3.0x3.0mm.kicad_mod  Diode_Bridge_GeneSiC_Semiconductor_KBPC_T_Mountpoint.kicad_mod  HeltecWiFiKit32.kicad_mod  Infineon_PG-DSO-14-40-EP.kicad_mod  Jack_3.5mm_QingPu_WQP-PJ398SM_Vertical.pretty  LICENSE.md  LQFP-144-1EP_20x20mm_P0.5mm_EP4x4mm.kicad_mod  LQFP-144-1EP_20x20mm_P0.5mm_EP5x5mm.kicad_mod  LQFP-144-1EP_20x20mm_P0.5mm_EP6.61x6.61mm.kicad_mod  LQFP-144-1EP_20x20mm_P0.5mm_EP7.2x7.2mm.kicad_mod  LQFP-144-1EP_20x20mm_P0.5mm_EP8.93x8.93mm.kicad_mod  NetTie-4_SMD_0.5mm.kicad_mod  NetTie-4_SMD_2.0mm.kicad_mod  NetTie-4_THT_0.3mm.kicad_mod  NetTie-4_THT_1.0mm.kicad_mod  README.md  Switch_THT_Toggle_DPDT_Vertical_Subminiature.kicad_mod  Switch_THT_Toggle_DPDT_Vertical_Subminiature_CircularHoles.kicad_mod  Switch_THT_Toggle_SPxT_Vertical_Subminiature.kicad_mod  Switch_THT_Toggle_SPxT_Vertical_Subminiature_CircularHoles.kicad_mod  Switch_Toggle_DPDT_Vertical_Subminiature.kicad_mod  Switch_Toggle_DPDT_Vertical_Subminiature_CircularHoles.kicad_mod  Switch_Toggle_SPxT_Vertical_Subminiature.kicad_mod  Switch_Toggle_SPxT_Vertical_Subminiature_CircularHoles.kicad_mod  TODO.md  Texas_MOF0009A.kicad_mod  Texas_RWH0032A.kicad_mod  fp-lib-table  kicad_george.mod
.github/: PULL_REQUEST_TEMPLATE.md  lockdown.yml
Audio_Module.pretty/: Reverb_BTDR-1H.kicad_mod  Reverb_BTDR-1V.kicad_mod
Battery.pretty/: BLM-BH18650-PC2.kicad_mod  BatteryContact_Keystone_261.kicad_mod  BatteryContact_Keystone_269.kicad_mod  BatteryHolder_Bulgin_BX0036_1xC.kicad_mod  BatteryHolder_CR1220_Keystone_500.kicad_mod  BatteryHolder_CR2032H.kicad_mod  BatteryHolder_ComfortableElectronic_CH273-2450_1x2450.kicad_mod  BatteryHolder_ComfortableElectronic_CH273-2450_1x2450_Exact.kicad_mod  BatteryHolder_Connfly_DS1092-10_1x2032.kicad_mod  BatteryHolder_Eagle_12BH611-GR.kicad_mod  BatteryHolder_KLS5-CR1220-01.kicad_mod  (+59 more)
(+24199 files in other folders)
